@@ -1,6 +1,6 @@
-# CodigoPostalApi2024
+# CodigoPostalApi
 
-High-performance REST API for querying Mexican postal codes (ZIP codes) with advanced caching, monitoring, and multi-environment support.
+High-performance REST API for querying Mexican postal codes (ZIP codes) with advanced caching, monitoring, and cloud-native deployment support.
 
 ## Table of Contents
 
@@ -15,46 +15,52 @@ High-performance REST API for querying Mexican postal codes (ZIP codes) with adv
 - [Testing](#testing)
 - [Performance](#performance)
 - [Docker Deployment](#docker-deployment)
+- [Railway Deployment](#railway-deployment)
 - [Development](#development)
 
 ## Features
 
-- **High Performance**: Handles 6,389 requests/second with 99% of requests under 190ms
+- **High Performance**: Handles 6,389+ requests/second with 99% of requests under 190ms
 - **Smart Caching**: Multi-level Caffeine cache with specific TTL per data type
 - **Pagination**: Consistent pagination across all search endpoints
+- **Partial Code Search**: Autocomplete support with partial zip code matching
+- **Advanced Search**: Multi-filter search by state, municipality, settlement, and zone type
+- **Simplified Response**: Optional lightweight response format without settlement details
 - **Robust Validation**: Data validation with comprehensive error handling
 - **Health Checks**: Custom health indicators for data loading status
-- **Multi-Environment**: Dev, QA, and Production profiles with different configurations
-- **Rate Limiting**: Token bucket algorithm to prevent API abuse (configurable per environment)
+- **Multi-Environment**: Dev, QA, Production, and Railway profiles
+- **Rate Limiting**: Token bucket algorithm to prevent API abuse
 - **Metrics**: Custom business metrics with Prometheus integration
 - **Accent-Insensitive Search**: Searches work regardless of accents or case
+- **Auto Encoding Detection**: Automatic detection of ISO-8859-1/UTF-8 file encoding
 - **Complete Documentation**: Interactive Swagger UI with examples
-- **Production-Ready**: Optimized Docker image with security best practices
+- **Cloud-Native**: Optimized for Railway, Docker, and container deployments
 
 ## Technologies
 
-- **Java 21** - LTS version with modern features
-- **Spring Boot 3** - Latest framework version
-- **Spring Web** - REST API support
-- **Spring Cache** - Caching abstraction
-- **Caffeine** - High-performance in-memory cache
-- **Bucket4j** - Rate limiting implementation
-- **Lombok** - Reduce boilerplate code
-- **Spring Boot Actuator** - Production-ready features
-- **Micrometer** - Application metrics
-- **Prometheus** - Metrics collection
-- **Grafana** - Metrics visualization
-- **Swagger/OpenAPI 3.0** - API documentation
-- **JUnit 5** - Testing framework
-- **Maven** - Build tool
+| Technology | Version | Description |
+|------------|---------|-------------|
+| **Java** | 25 LTS | Latest LTS with Compact Object Headers |
+| **Spring Boot** | 4.0.2 | Latest framework with modular architecture |
+| **Spring Web** | 7.0 | REST API support |
+| **Spring Cache** | - | Caching abstraction |
+| **Caffeine** | - | High-performance in-memory cache |
+| **Bucket4j** | 8.10.1 | Rate limiting implementation |
+| **Lombok** | 1.18.40 | Reduce boilerplate code |
+| **Spring Boot Actuator** | - | Production-ready features |
+| **Micrometer** | - | Application metrics |
+| **Prometheus** | - | Metrics collection |
+| **SpringDoc OpenAPI** | 3.0.1 | Swagger UI & API documentation |
+| **JUnit 6** | - | Testing framework |
+| **Maven** | 3.8+ | Build tool |
 
 ## Quick Start
 
 ### Prerequisites
 
-- Java 21 or higher
+- Java 25 or higher
 - Maven 3.8+
-- (Optional) Docker and Docker Compose
+- (Optional) Docker
 
 ### Clone and Run
 
@@ -81,8 +87,9 @@ The API will be available at `http://localhost:8080`
 ### Data Source
 
 The application uses the `CPdescarga.txt` file containing Mexican postal codes:
-- First, it tries to load from `C:/home/CPdescarga.txt`
-- If not found, it uses the bundled copy in `src/main/resources/CPdescarga.txt`
+- By default, it loads from `classpath:CPdescarga.txt` (bundled in JAR)
+- Can be overridden with environment variable: `ZIPCODE_FILE_PATH`
+- Supports both UTF-8 and ISO-8859-1 encoding (auto-detected)
 - Download the latest version [here](https://www.correosdemexico.gob.mx/SSLServicios/ConsultaCP/CodigoPostal_Exportar.aspx)
 
 ## API Endpoints
@@ -100,27 +107,87 @@ http://localhost:8080
 
 **Example Request:**
 ```bash
-curl http://localhost:8080/zip-codes/06140
+curl http://localhost:8080/zip-codes/01000
 ```
 
 **Example Response:**
 ```json
 {
-  "zip_code": "06140",
+  "zip_code": "01000",
   "locality": "Ciudad de México",
   "federal_entity": "Ciudad de México",
+  "municipality": "Álvaro Obregón",
   "settlements": [
     {
-      "name": "Condesa",
+      "name": "San Ángel",
       "zone_type": "Urbano",
       "settlement_type": "Colonia"
     }
-  ],
-  "municipality": "Cuauhtémoc"
+  ]
 }
 ```
 
-### 2. Search by Federal Entity (State)
+### 2. Partial Zip Code Search (Autocomplete)
+
+**Endpoint:** `GET /zip-codes/search?code={prefix}&limit={n}&simplified={bool}`
+
+**Description:** Search zip codes by prefix for autocomplete functionality.
+
+**Parameters:**
+- `code` (required): Partial zip code (1-5 digits)
+- `limit` (optional): Max results, default 10, max 50
+- `simplified` (optional): Return lightweight response, default false
+
+**Example Request:**
+```bash
+curl "http://localhost:8080/zip-codes/search?code=010&limit=5"
+```
+
+### 3. List All Federal Entities (States)
+
+**Endpoint:** `GET /zip-codes/federal-entities`
+
+**Description:** Get all 32 Mexican states with statistics.
+
+**Example Response:**
+```json
+[
+  {
+    "name": "Aguascalientes",
+    "zip_codes_count": 358,
+    "municipalities_count": 11
+  },
+  {
+    "name": "Ciudad de México",
+    "zip_codes_count": 1110,
+    "municipalities_count": 16
+  }
+]
+```
+
+### 4. List Municipalities by State
+
+**Endpoint:** `GET /zip-codes/federal-entities/{state}/municipalities`
+
+**Description:** Get all municipalities for a specific state.
+
+**Example Request:**
+```bash
+curl "http://localhost:8080/zip-codes/federal-entities/jalisco/municipalities"
+```
+
+### 5. Get Settlements by Zip Code
+
+**Endpoint:** `GET /zip-codes/{zipcode}/settlements`
+
+**Description:** Get only the settlements (colonies) for a specific zip code.
+
+**Example Request:**
+```bash
+curl "http://localhost:8080/zip-codes/01000/settlements"
+```
+
+### 6. Search by Federal Entity (State)
 
 **Endpoint:** `GET /zip-codes?federal_entity={name}&page={page}&size={size}`
 
@@ -136,44 +203,34 @@ curl http://localhost:8080/zip-codes/06140
 curl "http://localhost:8080/zip-codes?federal_entity=Ciudad%20de%20México&page=0&size=10"
 ```
 
-**Example Response:**
-```json
-{
-  "content": [
-    {
-      "zip_code": "01000",
-      "locality": "Ciudad de México",
-      "federal_entity": "Ciudad de México",
-      "settlements": [...],
-      "municipality": "Álvaro Obregón"
-    }
-  ],
-  "pageNumber": 0,
-  "pageSize": 10,
-  "totalElements": 5432,
-  "totalPages": 544,
-  "first": true,
-  "last": false
-}
-```
-
-### 3. Search by Municipality
+### 7. Search by Municipality
 
 **Endpoint:** `GET /zip-codes/by-municipality?municipality={name}&page={page}&size={size}`
 
 **Description:** Search postal codes by municipality name with pagination.
 
+### 8. Advanced Search
+
+**Endpoint:** `GET /zip-codes/advanced`
+
+**Description:** Search with multiple filters combined.
+
 **Parameters:**
-- `municipality` (required): Municipality name (partial match, accent-insensitive)
+- `federal_entity` (optional): State filter
+- `municipality` (optional): Municipality filter
+- `settlement` (optional): Settlement/colony name filter
+- `settlement_type` (optional): Type filter (Colonia, Fraccionamiento, etc.)
+- `zone_type` (optional): Zone filter (Urbano, Rural)
 - `page` (optional): Page number, default 0
 - `size` (optional): Page size, default 20, max 100
+- `simplified` (optional): Return lightweight response
 
 **Example Request:**
 ```bash
-curl "http://localhost:8080/zip-codes/by-municipality?municipality=Guadalajara&page=0&size=20"
+curl "http://localhost:8080/zip-codes/advanced?federal_entity=jalisco&municipality=guadalajara&zone_type=urbano"
 ```
 
-### 4. Statistics
+### 9. Statistics
 
 **Endpoint:** `GET /zip-codes/stats`
 
@@ -182,35 +239,10 @@ curl "http://localhost:8080/zip-codes/by-municipality?municipality=Guadalajara&p
 **Example Response:**
 ```json
 {
-  "totalZipCodes": 145000,
+  "totalZipCodes": 31918,
   "totalFederalEntities": 32,
-  "totalMunicipalities": 2469,
-  "totalSettlements": 285000
-}
-```
-
-### Error Responses
-
-**404 Not Found:**
-```json
-{
-  "error": "No postal code found: 99999"
-}
-```
-
-**400 Bad Request:**
-```json
-{
-  "error": "Invalid parameter: federal_entity is required"
-}
-```
-
-**429 Too Many Requests (when rate limit exceeded):**
-```json
-{
-  "status": 429,
-  "message": "Request limit exceeded. Maximum 100 requests per minute.",
-  "timestamp": "2026-01-08T10:30:45"
+  "totalMunicipalities": 2337,
+  "totalSettlements": 157424
 }
 ```
 
@@ -228,85 +260,54 @@ http://localhost:8080/v3/api-docs
 
 ## Configuration Profiles
 
-The application supports three deployment profiles with different configurations:
-
 ### Development Profile (`dev`)
 
-**Purpose:** Local development with no restrictions
-
-**Configuration:**
 - Rate limiting: DISABLED
-- Actuator endpoints: ALL exposed (`*`)
+- Actuator endpoints: ALL exposed
 - Logging level: DEBUG
 - Error details: FULL stack traces
 
-**Usage:**
 ```bash
 mvn spring-boot:run -Dspring-boot.run.profiles=dev
-# or
-export SPRING_PROFILE=dev
-java -jar app.jar
 ```
 
 ### QA Profile (`qa`)
 
-**Purpose:** Testing and staging environment
-
-**Configuration:**
 - Rate limiting: 1,000 requests/minute per IP
 - Burst capacity: 50 requests
-- Actuator endpoints: health, info, prometheus, metrics, env, configprops
 - Logging level: INFO
-
-**Usage:**
-```bash
-mvn spring-boot:run -Dspring-boot.run.profiles=qa
-```
 
 ### Production Profile (`prod`)
 
-**Purpose:** Production deployment with strict security
-
-**Configuration:**
 - Rate limiting: 100 requests/minute per IP
-- Burst capacity: 20 requests
-- Actuator endpoints: ONLY health and prometheus
 - Actuator port: Separate port 9090
 - Health details: NEVER shown
 - Logging level: WARN
-- Error details: HIDDEN (generic messages only)
-- Whitelist: 127.0.0.1 and internal networks (no rate limit)
 
-**Usage:**
+### Railway Profile (`railway`)
+
+- Port: Dynamic via `$PORT` environment variable
+- Rate limiting: 60 requests/minute per IP
+- Actuator: Same port as application
+- Optimized for cloud deployment
+
 ```bash
-java -jar app.jar --spring.profiles.active=prod
-# or with Docker
-docker run -e SPRING_PROFILE=prod -p 8080:8080 -p 9090:9090 codigopostal-api:latest
+# Set in Railway dashboard
+SPRING_PROFILES_ACTIVE=railway
 ```
 
 ## Rate Limiting
 
-### How It Works
+### Configuration per Profile
 
-Rate limiting uses the **Token Bucket** algorithm (Bucket4j library):
-
-- Each IP address has its own bucket
-- Buckets refill at a constant rate (100/min in prod, 1000/min in qa)
-- Each request consumes 1 token
-- Burst capacity allows temporary spikes
-
-**Example in Production:**
-```
-Minute 0: Bucket has 20 tokens
-Requests 1-20: ✓ Allowed (instant burst)
-Requests 21-100: ✓ Allowed (as tokens refill)
-Request 101: ✗ REJECTED (429 Too Many Requests)
-Minute 1: Bucket refills with 100 new tokens
-```
+| Profile | Status | Requests/Min | Burst Capacity |
+|---------|--------|--------------|----------------|
+| dev     | OFF | Unlimited    | N/A            |
+| qa      | ON  | 1,000        | 50             |
+| prod    | ON  | 100          | 20             |
+| railway | ON  | 60           | 15             |
 
 ### Response Headers
-
-When rate limiting is active, responses include:
 
 ```
 X-RateLimit-Limit: 100
@@ -314,176 +315,46 @@ X-RateLimit-Remaining: 87
 X-RateLimit-Retry-After-Seconds: 60
 ```
 
-### Configuration per Profile
-
-| Profile | Status | Requests/Min | Burst Capacity |
-|---------|--------|--------------|----------------|
-| dev     | ❌ OFF | Unlimited    | N/A            |
-| qa      | ✅ ON  | 1,000        | 50             |
-| prod    | ✅ ON  | 100          | 20             |
-
-### Testing Rate Limiting
-
-```bash
-# Test with Apache Bench
-ab -n 200 -c 20 http://localhost:8080/zip-codes/01000
-
-# Manual test
-for i in {1..150}; do
-  curl -I http://localhost:8080/zip-codes/01000
-done
-```
-
 ## Caching
 
 ### Multi-Level Cache Strategy
 
-The application uses Caffeine cache with specific configurations per data type:
-
-#### 1. Zip Code Cache
-- **Name:** `zipcodes`
-- **Capacity:** 10,000 entries
-- **TTL:** 1 hour (access-based)
-- **Use:** Individual zip code lookups
-
-#### 2. Federal Entity Search Cache
-- **Name:** `federalEntitySearch`
-- **Capacity:** 100 entries
-- **TTL:** 15 minutes (write-based)
-- **Use:** State-based searches
-
-#### 3. Municipality Search Cache
-- **Name:** `municipalitySearch`
-- **Capacity:** 200 entries
-- **TTL:** 15 minutes (write-based)
-- **Use:** Municipality-based searches
-
-### Cache Statistics
-
-Cache statistics are available via Prometheus metrics:
-
-```promql
-# Cache hit rate
-cache_gets_total{cache="zipcodes",result="hit"}
-cache_gets_total{cache="zipcodes",result="miss"}
-
-# Cache size
-cache_size{cache="zipcodes"}
-```
+| Cache Name | Capacity | TTL | Use Case |
+|------------|----------|-----|----------|
+| `zipcodes` | 10,000 | 1 hour | Individual zip code lookups |
+| `federalEntitySearch` | 100 | 15 min | State-based searches |
+| `municipalitySearch` | 200 | 15 min | Municipality searches |
+| `partialSearch` | 500 | 10 min | Autocomplete searches |
+| `federalEntities` | 1 | 1 hour | States list |
+| `municipalitiesByEntity` | 50 | 30 min | Municipalities by state |
+| `advancedSearch` | 100 | 10 min | Multi-filter searches |
 
 ## Monitoring and Metrics
 
 ### Actuator Endpoints
 
-Available endpoints depend on the active profile:
+```bash
+# Health check
+curl http://localhost:8080/actuator/health
 
-**Development (all endpoints):**
-```
-http://localhost:8080/actuator
-```
-
-**Production (restricted):**
-```
-# Application health
-http://localhost:8080/actuator/health
-
-# Prometheus metrics (on separate port)
-http://localhost:9090/actuator/prometheus
+# Prometheus metrics
+curl http://localhost:8080/actuator/prometheus
 ```
 
 ### Custom Business Metrics
 
-The application exposes custom metrics for monitoring:
-
 ```promql
-# Search counters
 zipcode_search_direct_total           # Direct zip code searches
 zipcode_search_federal_entity_total   # State searches
-zipcode_search_municipality_total     # Municipality searches
-
-# Search duration (histogram)
-zipcode_search_duration_seconds{type="direct"}
-zipcode_search_duration_seconds{type="federal_entity"}
-zipcode_search_duration_seconds{type="municipality"}
-
-# Error counters
-zipcode_search_errors_total{search_type="direct",error_type="not_found"}
-
-# Result size distribution
-zipcode_search_result_size{search_type="federal_entity"}
-
-# Total searches
-zipcode_searches_total
-```
-
-### Prometheus and Grafana Setup
-
-The repository includes a complete monitoring stack:
-
-1. **Start the stack:**
-   ```bash
-   docker-compose up --build
-   ```
-
-2. **Access services:**
-   - API: http://localhost:8080
-   - Prometheus: http://localhost:9090
-   - Grafana: http://localhost:3000 (admin/admin)
-
-3. **Configure Grafana:**
-   - Add Prometheus as a data source: `http://prometheus:9090`
-   - Import Spring Boot dashboard (ID: 7566)
-   - Create custom dashboards with business metrics
-
-### Useful Prometheus Queries
-
-```promql
-# Requests per second
-rate(zipcode_search_direct_total[5m])
-
-# 95th percentile latency
-histogram_quantile(0.95, rate(zipcode_search_duration_seconds_bucket[5m]))
-
-# Error rate
-rate(zipcode_search_errors_total[5m])
-
-# Cache hit rate
-rate(cache_gets_total{result="hit"}[5m]) / rate(cache_gets_total[5m])
-```
-
-### Health Check
-
-Custom health indicator monitors data loading:
-
-```bash
-curl http://localhost:8080/actuator/health
-```
-
-**Response:**
-```json
-{
-  "status": "UP",
-  "components": {
-    "zipCodeData": {
-      "status": "UP",
-      "details": {
-        "zipCodeCount": 145000
-      }
-    }
-  }
-}
+zipcode_search_duration_seconds       # Search latency histogram
+zipcode_search_errors_total           # Error counters
 ```
 
 ## Testing
 
-### Run Tests
-
 ```bash
 # Run all tests
 mvn test
-
-# Run specific test class
-mvn test -Dtest=ZipCodeServiceTest
 
 # Run with coverage
 mvn test jacoco:report
@@ -492,130 +363,79 @@ mvn test jacoco:report
 ### Test Coverage
 
 - **Total tests:** 33
-- **Passing:** 28 (85%)
 - **Unit tests:** 14 (ZipCodeServiceTest)
 - **Integration tests:** 18 (ControllerTest)
-- **Application test:** 1 (CodigoPostalApiApplicationTests)
-
-### Test Categories
-
-**Unit Tests (ZipCodeServiceTest):**
-- Data loading validation
-- Direct zip code retrieval
-- Search by federal entity
-- Search by municipality
-- Accent-insensitive searches
-- Partial matching
-- Error handling
-- Statistics calculation
-
-**Integration Tests (ControllerTest):**
-- REST endpoint responses
-- HTTP status codes
-- Pagination validation
-- Parameter validation
-- Error responses
-- Case-insensitive searches
-- Content type validation
+- **Application test:** 1
 
 ## Performance
 
-### Benchmark Results
+### Benchmark Results (Apache Bench)
 
-Performance tests conducted with Apache Bench on endpoint `/zip-codes/01000`:
+| Metric | Value |
+|--------|-------|
+| Requests per second | 6,389 req/s |
+| Time per request (mean) | 156 ms |
+| Failed requests | 0 |
+| 99th percentile | 190 ms |
 
-**Test Configuration:**
-- Concurrency: 1,000 simultaneous connections
-- Total requests: 100,000
-- Server: Local (127.0.0.1:8080)
+### Java 25 Optimizations
 
-**Results:**
-- **Requests per second:** 6,389.36 req/s
-- **Time per request (mean):** 156.51 ms
-- **Time per request (concurrent):** 0.157 ms
-- **Failed requests:** 0
-- **Total time:** 15.651 seconds
+The application leverages Java 25 LTS features:
 
-**Response Time Distribution:**
-
-| Percentile | Time (ms) |
-|------------|-----------|
-| 50%        | 155       |
-| 75%        | 160       |
-| 90%        | 168       |
-| 95%        | 175       |
-| 99%        | 190       |
-| 100%       | 194       |
-
-**Conclusions:**
-- Zero errors on 100,000 requests
-- 99% of requests completed in under 190ms
-- Excellent performance under high concurrency
-
-### Performance Optimizations
-
-1. **In-Memory Data Storage:** All postal codes loaded into memory for instant access
-2. **Indexed Search:** Inverted indices for federal entities and municipalities
-3. **Smart Caching:** Caffeine cache with specific TTL per data type
-4. **Pagination:** Prevents large data transfers
-5. **String Normalization:** Pre-computed normalized strings for searches
-6. **Optimized JVM:** Container-aware settings with G1GC
+- **Compact Object Headers**: Reduces object header from 12 to 8 bytes (~20% heap reduction)
+- **ZGC Generational**: Low-latency garbage collector
+- **Virtual Threads**: Enabled for high concurrency
 
 ## Docker Deployment
 
-### Optimized Dockerfile
-
-The project includes a production-optimized Dockerfile with:
-
-- **Layer Caching:** Dependencies cached separately from source code
-- **Alpine Image:** 40% smaller (150MB vs 250MB)
-- **Non-Root User:** Security best practice
-- **Health Check:** Integrated container health monitoring
-- **JVM Optimization:** Container-aware memory settings
-
-### Build Docker Image
+### Build and Run
 
 ```bash
+# Build image
 docker build -t codigopostal-api:latest .
-```
 
-### Run Docker Container
-
-```bash
-# Development
+# Run container
 docker run -p 8080:8080 \
-  -e SPRING_PROFILE=dev \
-  codigopostal-api:latest
-
-# Production
-docker run -p 8080:8080 -p 9090:9090 \
-  -e SPRING_PROFILE=prod \
-  -e JAVA_OPTS="-Xmx512m" \
+  -e SPRING_PROFILES_ACTIVE=prod \
   codigopostal-api:latest
 ```
 
-### Docker Compose (Full Stack)
+### Dockerfile Features
 
-```bash
-# Start API + Prometheus + Grafana
-docker-compose up --build
+- Multi-stage build (JDK 25 for build, JRE 25 Alpine for runtime)
+- Non-root user for security
+- Integrated health check
+- JVM optimizations for containers:
+  ```
+  -XX:+UseCompactObjectHeaders
+  -XX:+UseZGC
+  -XX:+ZGenerational
+  -XX:MaxRAMPercentage=70.0
+  ```
 
-# Stop all services
-docker-compose down
-```
+## Railway Deployment
 
-**Services:**
-- API: http://localhost:8080
-- Prometheus: http://localhost:9090
-- Grafana: http://localhost:3000
+### Quick Deploy
 
-### Docker Build Performance
+1. Push code to GitHub
+2. Create new project in [Railway](https://railway.app)
+3. Connect your repository
+4. Set environment variable:
+   ```
+   SPRING_PROFILES_ACTIVE=railway
+   ```
+5. Deploy!
 
-| Metric          | Before | After | Improvement |
-|-----------------|--------|-------|-------------|
-| Image size      | 250MB  | 150MB | 40% smaller |
-| Build time      | 3 min  | 30 sec| 6x faster   |
-| (cache hit)     |        |       |             |
+### Configuration Files
+
+- `railway.toml` - Railway-specific deployment configuration
+- `application-railway.yml` - Railway profile settings
+
+### Estimated Resources
+
+- **RAM**: ~200-250 MB
+- **Startup time**: ~3-5 seconds
+- **Cost**: ~$5 USD/month (Hobby plan)
 
 ## Development
 
@@ -623,114 +443,41 @@ docker-compose down
 
 ```
 CodigoPostalApi2024/
-├── src/
-│   ├── main/
-│   │   ├── java/com/coderalexis/CodigoPostalApi/
-│   │   │   ├── config/              # Configuration classes
-│   │   │   │   ├── CacheConfiguration.java
-│   │   │   │   ├── CacheWarmupRunner.java
-│   │   │   │   ├── MetricsConfiguration.java
-│   │   │   │   ├── RateLimitInterceptor.java
-│   │   │   │   ├── RateLimitProperties.java
-│   │   │   │   ├── SwaggerConfiguration.java
-│   │   │   │   └── WebMvcConfiguration.java
-│   │   │   ├── controller/          # REST controllers
-│   │   │   │   └── Controller.java
-│   │   │   ├── health/              # Custom health indicators
-│   │   │   │   └── ZipCodeHealthIndicator.java
-│   │   │   ├── model/               # Data models
-│   │   │   │   ├── PagedResponse.java
-│   │   │   │   ├── Settlements.java
-│   │   │   │   ├── ZipCode.java
-│   │   │   │   └── ZipCodeStats.java
-│   │   │   ├── service/             # Business logic
-│   │   │   │   └── ZipCodeService.java
-│   │   │   └── util/                # Utilities
-│   │   │       └── Util.java
-│   │   └── resources/
-│   │       ├── application.yml       # Base configuration
-│   │       ├── application-dev.yml   # Dev profile
-│   │       ├── application-qa.yml    # QA profile
-│   │       ├── application-prod.yml  # Production profile
-│   │       └── CPdescarga.txt        # Postal codes data
-│   └── test/
-│       └── java/com/coderalexis/CodigoPostalApi/
-│           ├── controller/
-│           │   └── ControllerTest.java
-│           └── service/
-│               └── ZipCodeServiceTest.java
-├── docker-compose.yml
+├── src/main/java/com/coderalexis/CodigoPostalApi/
+│   ├── config/           # Configuration classes
+│   ├── controller/       # REST controllers
+│   ├── exceptions/       # Exception handlers
+│   ├── health/           # Health indicators
+│   ├── model/            # Data models
+│   ├── service/          # Business logic
+│   └── util/             # Utilities
+├── src/main/resources/
+│   ├── application.yml
+│   ├── application-dev.yml
+│   ├── application-prod.yml
+│   ├── application-qa.yml
+│   ├── application-railway.yml
+│   └── CPdescarga.txt
 ├── Dockerfile
-├── prometheus.yml
-├── pom.xml
-└── README.md
+├── railway.toml
+└── pom.xml
 ```
-
-### Key Design Patterns
-
-1. **Service Layer Pattern:** Business logic in ZipCodeService
-2. **Configuration Classes:** Externalized configuration with profiles
-3. **Builder Pattern:** PagedResponse construction
-4. **Dependency Injection:** Spring IoC container
-5. **Interceptor Pattern:** Rate limiting with HandlerInterceptor
-
-### Code Quality Features
-
-- **Input Validation:** Jakarta Validation annotations
-- **Error Handling:** Global exception handler
-- **Logging:** SLF4J with structured logging
-- **Constants:** Named constants instead of magic numbers
-- **Data Validation:** Robust validation on data loading
-- **Lombok:** Reduced boilerplate with @Data, @Builder, @Slf4j
 
 ### Build Commands
 
 ```bash
-# Clean build
-mvn clean
-
-# Compile
-mvn compile
-
-# Run tests
-mvn test
-
-# Package (skip tests)
-mvn package -DskipTests
-
-# Full build
-mvn clean package
-
-# Run application
-mvn spring-boot:run
-
-# Run with specific profile
-mvn spring-boot:run -Dspring-boot.run.profiles=prod
-
-# Generate Maven wrapper
-mvn wrapper:wrapper
+mvn clean compile      # Compile
+mvn test               # Run tests
+mvn package            # Build JAR
+mvn spring-boot:run    # Run application
 ```
 
 ### IDE Setup
 
 **IntelliJ IDEA:**
 1. Install Lombok plugin
-2. Enable annotation processing: `Settings > Build, Execution, Deployment > Compiler > Annotation Processors`
-3. Import Maven project
-4. Set project SDK to Java 21
-
-**VS Code:**
-1. Install Extension Pack for Java
-2. Install Lombok Annotations Support
-3. Open folder as Maven project
-
-## Contributing
-
-1. Fork the repository
-2. Create a feature branch (`git checkout -b feature/amazing-feature`)
-3. Commit your changes (`git commit -m 'Add amazing feature'`)
-4. Push to the branch (`git push origin feature/amazing-feature`)
-5. Open a Pull Request
+2. Enable annotation processing
+3. Set project SDK to Java 25
 
 ## License
 
@@ -738,31 +485,36 @@ This project is licensed under the MIT License.
 
 ## Data Source
 
-Postal codes data is sourced from:
+Postal codes data sourced from:
 **Servicio Postal Mexicano (SEPOMEX)**
 [Download latest data](https://www.correosdemexico.gob.mx/SSLServicios/ConsultaCP/CodigoPostal_Exportar.aspx)
 
-## Contact
-
-Created by [@coderalexis](https://github.com/coderalexis)
-
 ## Version History
 
+### v3.0.0 (2026-02-04)
+- **Upgraded to Java 25 LTS** with Compact Object Headers
+- **Upgraded to Spring Boot 4.0.2** with modular architecture
+- Added partial zip code search (autocomplete)
+- Added list all federal entities endpoint
+- Added municipalities by state endpoint
+- Added settlements by zip code endpoint
+- Added advanced multi-filter search
+- Added simplified response format option
+- Added Railway deployment support
+- Auto-detection of file encoding (ISO-8859-1/UTF-8)
+- Improved error handling for browser requests
+- Updated all dependencies for Java 25 compatibility
+
 ### v2.1.0 (2026-01-08)
-- Added rate limiting with Bucket4j (dev/qa/prod profiles)
+- Added rate limiting with Bucket4j
 - Implemented custom business metrics
-- Optimized Dockerfile (40% size reduction)
+- Optimized Dockerfile
 - Enhanced Swagger documentation
-- Improved security for Actuator endpoints
-- Added comprehensive test suite (85% coverage)
-- Implemented multi-level caching strategy
-- Added health checks for data loading
-- Improved logging with performance metrics
+- Multi-level caching strategy
 
 ### v2.0.0 (Initial Release)
 - REST API for Mexican postal codes
 - Search by zip code, state, and municipality
 - Caffeine cache integration
 - Prometheus metrics
-- Swagger documentation
 - Docker support
